# image_processing_100

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common.mk  compile.bash  make_all.sh  run_all.py  run_all.sh  run_target.bash
1/: CMakeLists.txt  Makefile  cpp.hpp  main.cpp
1-rgb_to_bgr/: CMakeLists.txt
1-rgb_to_bgr/src/: main.cpp  rgb_to_bgr_cpp.hpp  rgb_to_bgr_neon.hpp
1/src/: main.cpp  rgb_to_bgr_cpp.hpp  rgb_to_bgr_cuda.hpp  rgb_to_bgr_kernel.cu  rgb_to_bgr_neon.hpp
10-median_filter/: CMakeLists.txt
10-median_filter/src/: main.cpp  median_filter_cpu.hpp  median_filter_cuda.hpp  median_filter_kernel.cu
11/: CMakeLists.txt  Makefile
11-mean_filter/: CMakeLists.txt
11-mean_filter/src/: main.cpp  mean_filter_cpu.hpp  mean_filter_cuda.hpp  mean_filter_neon.hpp
11/src/: main.cpp  mean_filter_kernel.cu
2/: CMakeLists.txt  Makefile  cpp.hpp  cuda_kernel.cu  main.cpp
2-rgb_to_gray/: CMakeLists.txt
2-rgb_to_gray/src/: main.cpp  rgb_to_gray_avx2.hpp  rgb_to_gray_cpp.hpp  rgb_to_gray_kernel.cu  rgb_to_gray_neon.hpp
2/src/: cpp.hpp  cuda.hpp  cuda_kernel.cpp  cuda_kernel.cu  main.cpp  neon.hpp  rgb_to_gray_kernel.cu  rgb_to_gray_neon.hpp
3/: CMakeLists.txt  Makefile
3-binarization/: CMakeLists.txt
3-binarization/src/: main.cpp  threshold_cpp.hpp  threshold_cuda.hpp  threshold_kernel.cu  threshold_neon.hpp
3/src/: main.cpp  threshold_cpp.hpp  threshold_kernel.cu  threshold_neon.hpp
4/: CMakeLists.txt  Makefile
4-otsu_binarization/: CMakeLists.txt
4-otsu_binarization/src/: main.cpp  threshold_otsu_cpp.hpp  threshold_otsu_kernel.cu
4/src/: main.cpp  threshold_otsu_cpp.hpp  threshold_otsu_cuda.hpp  threshold_otsu_kernel.cu  threshold_otsu_neon.hpp
47/: CMakeLists.txt  Makefile
47-dilation/: CMakeLists.txt
47-dilation/src/: dilation_cpp.hpp  dilation_kernel.cu  dilation_neon.hpp  main.cpp
47/src/: dilation_cuda.hpp  dilation_kernel.cu  main.cpp
5/: CMakeLists.txt  Makefile
5-rgb_to_hsv/: CMakeLists.txt
5-rgb_to_hsv/src/: main.cpp  rgb_to_hsv_cpp.hpp  rgb_to_hsv_kernel.cu  rgb_to_hsv_neon.hpp
5/src/: main.cpp  rgb_to_hsv_cpp.hpp  rgb_to_hsv_cuda.hpp  rgb_to_hsv_kernel.cu  (+1 more)
6/: CMakeLists.txt
6-color_reduction/: CMakeLists.txt
7/: CMakeLists.txt
7-average_pooling/: CMakeLists.txt
8/: CMakeLists.txt  Makefile
8-max_pooling/: CMakeLists.txt
9/: CMakeLists.txt  Makefile
9-gaussian_filter/: CMakeLists.txt
inc/: common.hpp
include/: avx2_utils.hpp  common.hpp  cuda_safe_call.hpp  device_buffer.hpp  neon_utils.hpp
(+30 files in other folders)
